--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
     "typescript": "^5.0.3"
+  },
+  "engines": {
+    "node": "16.19.0"
   }
 }
